crates/weaver-e2e/tests/snapshots/rust_attribute_macro.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 2:4 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 1\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"fn sample_test()\",\n      \"params\": [],\n      \"returns\": \"\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"rust\",\n        \"name\": \"sample_test\",\n        \"range\": {\n          \"end\": {\n            \"column\": 19,\n            \"line\": 1\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 1\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
