crates/weaver-e2e/tests/snapshots/rust_control_flow.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:4 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 2,\n      \"lines\": 7\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"fn classify(value: i32) -> &'static str\",\n      \"params\": [\n        {\n          \"name\": \"value\",\n          \"type\": \"i32\"\n        }\n      ],\n      \"returns\": \"&'static str\"\n    },\n    \"structure\": {\n      \"branches\": [\n        {\n          \"kind\": \"match\",\n          \"line\": 1\n        }\n      ],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"rust\",\n        \"name\": \"classify\",\n        \"range\": {\n          \"end\": {\n            \"column\": 1,\n            \"line\": 6\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
