crates/weaver-e2e/tests/snapshots/rust_detail_signature.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 1:4 --detail signature",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"fn greet(name: &str) -> String\",\n      \"params\": [\n        {\n          \"name\": \"name\",\n          \"type\": \"&str\"\n        }\n      ],\n      \"returns\": \"String\"\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"rust\",\n        \"name\": \"greet\",\n        \"range\": {\n          \"end\": {\n            \"column\": 1,\n            \"line\": 2\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 0\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
