crates/weaver-e2e/tests/snapshots/rust_doc_comments.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 2:4 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"attachments\": {\n      \"bundle_rule\": \"leading_trivia\",\n      \"decorators\": [],\n      \"doc_comments\": [\n        \"Greets callers.\"\n      ],\n      \"normalized\": {\n        \"decorators\": []\n      }\n    },\n    \"card_version\": 1,\n    \"doc\": {\n      \"docstring\": \"Greets callers.\",\n      \"source\": \"tree_sitter\",\n      \"summary\": \"Greets callers.\"\n    },\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 1\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"fn greet()\",\n      \"params\": [],\n      \"returns\": \"\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"kind\": \"function\",\n        \"language\": \"rust\",\n        \"name\": \"greet\",\n        \"range\": {\n          \"end\": {\n            \"column\": 13,\n            \"line\": 1\n          },\n          \"start\": {\n            \"column\": 0,\n            \"line\": 1\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
