crates/weaver-e2e/tests/snapshots/rust_impl_methods.snap
---
source: crates/weaver-e2e/tests/get_card_snapshots.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe get-card --uri <uri> --position 4:8 --detail structure",
  "status": 0,
  "stdout": "{\n  \"card\": {\n    \"card_version\": 1,\n    \"etag\": \"<etag>\",\n    \"metrics\": {\n      \"cyclomatic\": 1,\n      \"lines\": 3\n    },\n    \"provenance\": {\n      \"extracted_at\": \"<timestamp>\",\n      \"sources\": [\n        \"tree_sitter\"\n      ]\n    },\n    \"signature\": {\n      \"display\": \"fn increment(&mut self)\",\n      \"params\": [],\n      \"returns\": \"\"\n    },\n    \"structure\": {\n      \"branches\": [],\n      \"locals\": []\n    },\n    \"symbol\": {\n      \"ref\": {\n        \"container\": \"Counter\",\n        \"kind\": \"method\",\n        \"language\": \"rust\",\n        \"name\": \"increment\",\n        \"range\": {\n          \"end\": {\n            \"column\": 5,\n            \"line\": 5\n          },\n          \"start\": {\n            \"column\": 4,\n            \"line\": 3\n          }\n        },\n        \"uri\": \"<uri>\"\n      },\n      \"symbol_id\": \"<symbol_id>\"\n    }\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
